// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthVerifyPageUI > should render AuthVerifyPageUI as loading 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content fullWidth centerAlign"
    >
      <div
        class="typography subtitle small"
      >
        One moment… verifying your magic link!
      </div>
      <div
        class="loadingSpinnerContainer"
      >
        <div />
        <div />
        <div />
      </div>
      <div
        class="typography text small"
      >
        Good things come to those who wait!
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthVerifyPageUI > should render AuthVerifyPageUI as verified 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content fullWidth centerAlign"
    >
      <div
        class="badge large green"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-check "
          data-icon="check"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="typography subtitle medium"
      >
        Hooray! Your email’s all set!
      </div>
      <div
        class="typography text medium"
      >
        Welcome aboard the fun train. Let’s roll!
      </div>
      <a
        data-discover="true"
        href="/auth/login"
      >
        <div
          class="typography link small"
        >
          Log in to get started!
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`AuthVerifyPageUI > should render AuthVerifyPageUI as verified and logged in 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content fullWidth centerAlign"
    >
      <div
        class="badge large green"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-check "
          data-icon="check"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="typography subtitle medium"
      >
        Hooray! Your email’s all set!
      </div>
      <div
        class="typography text medium"
      >
        Welcome aboard the fun train. Let’s roll!
      </div>
      <a
        data-discover="true"
        href="/"
      >
        <div
          class="typography link small"
        >
          Take me home
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`AuthVerifyPageUI > should render AuthVerifyPageUI with error 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content fullWidth centerAlign"
    >
      <div
        class="badge large red"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-xmark "
          data-icon="xmark"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 384 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="typography subtitle small"
      >
        Oops! Something went wrong.
      </div>
      <div
        class="typography text medium"
      >
        The supplied link is invalid or has expired.
      </div>
    </div>
  </div>
</div>
`;
